--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1 style="text-align: center;">LeTranslator</h1>
         <h3 style="text-align: center;">An almost-working English-to-French translator</h3>
-        <form name = "inputForm" action="." method="POST">
+        <form name = "inputForm" action="{{url_for('translate')}}" method="POST">
             <label>Enter a sentence: </label>
             <input type="text" name="sentence">
             <input type="submit" value="Translate">
